--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 sudo: false # faster builds
 
-script: mvn cobertura:cobertura -Dmaven.test.skip=false
+script: "mvn cobertura:cobertura -Dmaven.test.skip=false"
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
