--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ jdk:
   - openjdk7
   
 script:
+ - mvn clean package
  - mvn cobertura:cobertura
 after_success:
   - bash <(curl -s https://codecov.io/bash)
